wrap-content: Fix for issue #72.
 * Creates a new shared directive `autofit` which resize each textarea element
   to it's content height respectively.

--- a/src/primitive-field/primitive-field.component.scss
+++ b/src/primitive-field/primitive-field.component.scss
@@ -16,10 +16,6 @@ div.editable-field-container input {
     -webkit-box-sizing: border-box; // For Safari
 }
 
-div.editable-field-container textarea:focus {
-    height: 6em;
-}
-
 div.editable-field-container:hover {
     background: #ffa;
 }
